--- a/_posts/2023-01-26-Jingo.md
+++ b/_posts/2023-01-26-Jingo.md
@@ -4,7 +4,8 @@ author: Terry Pratchett
 date: 2023-01-26 04:51:28
 layout: post
 category: book
-tags: read 3-stars
+tags: read
+stars: 3
 draft: false
 ---
 
