--- a/_posts/2023-05-20-The-Iliad.md
+++ b/_posts/2023-05-20-The-Iliad.md
@@ -4,7 +4,8 @@ author: Homer
 date: 2023-05-20 20:26:15
 layout: post
 category: book
-tags: listened 4-stars
+tags: listened
+stars: 4
 draft: false
 ---
 
