--- a/_posts/2023-06-29-Black-Sun.md
+++ b/_posts/2023-06-29-Black-Sun.md
@@ -4,7 +4,8 @@ author: Rebecca Roanhorse
 date: 2023-06-29 02:16:21
 layout: post
 category: book
-tags: read 3-stars
+tags: read
+stars: 3
 draft: false
 ---
 
