--- a/_posts/2023-07-19-Stoner.md
+++ b/_posts/2023-07-19-Stoner.md
@@ -4,7 +4,8 @@ author: John Williams
 date: 2023-07-19 13:29:31
 layout: post
 category: book
-tags: listened 3-stars
+tags: listened
+stars: 3
 draft: false
 ---
 
