--- a/_posts/2023-01-27-Ducks.md
+++ b/_posts/2023-01-27-Ducks.md
@@ -4,7 +4,8 @@ author: Kate Beacon
 date: 2023-01-27 02:43:17
 layout: post
 category: book
-tags: read 5-stars
+tags: read
+stars: 5
 draft: false
 ---
 
