Add location information to posts

--- a/_posts/2023-01-27-Ducks.md
+++ b/_posts/2023-01-27-Ducks.md
@@ -7,6 +7,7 @@ category: book
 tags: read
 stars: 5
 draft: false
+mapping: Nova Scotia, Canada, North America
 ---
 
 Kate Beaton is great, this book is great, this book is heavy and traumatic and human and occasionally a bit sweet. Should be read.
