--- a/_posts/2023-07-19-Stoner.md
+++ b/_posts/2023-07-19-Stoner.md
@@ -6,7 +6,7 @@ layout: post
 category: book
 tags: listened
 stars: 3
-draft: false
+mapping: Colorado, USA, North America
 ---
 
 I think I spend too much time trying to solve for the author of a book, in general, when I read. Really I suppose I should kill the author, that is the cool thing to do. But I think here that is my criticism of this book - while aesthetically, technically quite sound (impressive even? great maybe? approaching greatness, at the least), I'm just not that much of a fan of how the author drips through the cracks. The author is someone who read that the mass of men lead lives of quiet desperation, who admires the stoic farmer and romanticizes the farmer poet. Which, like, fair! The farmer-poet is romantic, and there is a lot of desperation around. And I have enjoyed or at least gotten something out of sad or depressing or hopeless books before - they can provide solace, or validation, or a call to action, they can contain a new way of looking at things whose impact shatters against your soul, or a new way to empathize with people. Not to be like comprehensive about it, but those are what I have gotten.
