--- a/_posts/2023-01-26-Jingo.md
+++ b/_posts/2023-01-26-Jingo.md
@@ -7,6 +7,7 @@ category: book
 tags: read
 stars: 3
 draft: false
+mapping: England, UK, Europe
 ---
 
 Not Pratchett's best, not the best Pratchett featuring these characters, but I mean, still Pratchett, still heartfelt and earnest light silly fantasy about racism and war. Good fun, and would recommend, but maybe not for someone's first experience of Discworld.
