--- a/_posts/2023-05-20-The-Iliad.md
+++ b/_posts/2023-05-20-The-Iliad.md
@@ -7,6 +7,7 @@ category: book
 tags: listened
 stars: 4
 draft: false
+mapping: Greece, Europe
 ---
 
 Lots of X begat Y, lots of and Petracliffs, he had 50 black ships too. But I mean surely this was just the Avengers, a few millennia ago? Of a comparable level of cultural cachet! And the parts that were not lists had some quite-frankly surprisingly good writing, probably even better than the Avengers. A good reminder that even way back in the olden days people liked to be entertained and could be entertaining
