--- a/_posts/2023-05-20-Ulysses.md
+++ b/_posts/2023-05-20-Ulysses.md
@@ -7,6 +7,7 @@ category: book
 tags: listened
 stars: 5
 draft: false
+mapping: Ireland, Europe
 ---
 
 I mean I thought this was pretty great actually. Tedious, sure, full of itself, sure, riddled with references and languages I either got, or as may happen, did not. I'm fine with a bit of navel-gazing, I can appreciate it, but 800 pages is a lot of pages of naval-gazing. Thank god for the audiobook I guess, not sure I would have finished otherwise, and but does that even count? And I wasn't always sure of what was going on or when I was who. But for all that - some of the best prose, an amazing project, an Oddysey for our time, a century ago. I should probably read the Oddysey. I thought the ending a just about perfect ending making for it a just about perfect example of that which it is. The characters were adroitly captured, Dublin adroitly captured, the time, adroitly captured. I liked how the words went together, and they went together in some wild ways. Not my favorite novel, but at the same time maybe the best? I can see why it might be the best.
