--- a/_posts/2023-06-25-Walden.md
+++ b/_posts/2023-06-25-Walden.md
@@ -6,6 +6,7 @@ layout: post
 category: book
 tags: listened
 draft: false
+mapping: Walden, MA, USA, North America
 ---
 
-I listened to Walden while walking through the woods around Walden, and I gotta say - the words still ring true. Yes, he was a few hours walk from Boston, yes his mom probably did his laundry for him and the whole experience is a bit silly on the face of it. But there is a pleasant earnestness and optimism to Thoreau's years in "the woods" that I can't help but admire. 
+I listened to Walden while walking through the woods around Walden, and I gotta say - the words still ring true. Yes, he was a few hours walk from Boston, yes his mom probably did his laundry for him and the whole experience is a bit silly on the face of it. But there is a pleasant earnestness and optimism to Thoreau's years in "the woods" that I can't help but admire.
