Moby Dick and Karamazov

--- a/_posts/2023-05-20-Ulysses.md
+++ b/_posts/2023-05-20-Ulysses.md
@@ -2,6 +2,7 @@
 title: "Ulysses"
 author: James Joyce
 date: 2023-05-20 19:24:45
+written: 1922
 layout: post
 category: book
 tags: listened modern best
