--- a/_posts/2023-06-29-Black-Sun.md
+++ b/_posts/2023-06-29-Black-Sun.md
@@ -10,4 +10,4 @@ mapping: New Mexico, USA, North America
 gender: f
 ---
 
-Pretty good, really! It is a bit tropey, the pirate mermaid is a good bit and some fun sociopolitical drama is scattered throughout, has a refreshing fantasy setting. I think, had I read this when I was younger, I would have loved it - but as it is, it did ring a little hollow, a little by-the-book, and when , 80% of the way in, I noticed that it was going to end on a cliffhanger setting up a sequel (series?) I was a bit dissapointed. I'll probably read the next, would honestly expect to enjoy it more.
+Pretty good, really! It is a bit tropey, the pirate mermaid is a good bit and some fun sociopolitical drama is scattered throughout, has a refreshing fantasy setting. I think, had I read this when I was younger, I would have loved it - but as it is, it did ring a little hollow, a little by-the-book, and when , 80% of the way in, I noticed that it was going to end on a cliffhanger setting up a sequel (series?) I was a bit disappointed. I'll probably read the next, would honestly expect to enjoy it more.
