--- a/_posts/2014-01-01-Life-of-Pi.md
+++ b/_posts/2014-01-01-Life-of-Pi.md
@@ -8,7 +8,7 @@ written: 2001
 stars: 5
 layout: post
 category: book
-tags: read unreviewed
+tags: read unreviewed animals
 mapping: Canada, North America
 gender: m
 ---
